[tool.poetry]
name = "bayesian-ab-test"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
colorlover = "^0.3.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
pandas = "^2.1.0"
plotly = "^5.17.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
tqdm = "^4.66.1"
nbformat = "^5.9.2"
kaleido = "0.2.1"
ffmpeg-python = "^0.2.0"
notebook = "^7.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
